tests/interpreter/errors/unary_type_error.err
error[I008]: invalid use of unary '-' on string
  --> tests/interpreter/errors/unary_type_error.mochi:2:7

  2 | print(-s) // invalid unary minus on string
    |       ^

help:
  Use unary operators only with numeric or boolean values.